src/test/deca/syntax/valid/empty_print.deca
// Description:
//    test du syntax de l'affichage vide
//
// Resultats:
//   
//
// Historique:
//    cree le 22/01/2022

{
    println();
}