src/test/deca/syntax/invalid/created/syntax/no_endMain.deca
// Description:
//    test de programme avec Main non fermé
//
// Resultats:
//    13:0: missing '}' at '<EOF>
//
// Historique:
//    cree le 08/01/2022


{   
    println("hello") ;
